--- a/my_style_for_about_me.css
+++ b/my_style_for_about_me.css
@@ -1,7 +1,10 @@
 
-body {
+div {
     background-color: rgb(23, 19, 21);
-    border-radius: 10px;
+    margin: 2px;
+    padding: 70px;
+    border: 10px;
+
 }
 p{
     color: bisque;
